Dims non-active Gallery images during search, don't hide totally

--- a/PuzzlePublisher.sketchplugin/Contents/Sketch/resources/viewer.css
+++ b/PuzzlePublisher.sketchplugin/Contents/Sketch/resources/viewer.css
@@ -614,6 +614,10 @@ text-overflow: ellipsis;
     transition: transform .24s, box-shadow .24s;
 }
 
+.galleryArtboardAbsHidden{
+    opacity: 0.2;
+}
+
 .galleryArtboardLabelAbs{
     position: absolute;
     color:      var(--color-active);    
