--- a/PuzzlePublisher.sketchplugin/Contents/Sketch/resources/viewer-top.css
+++ b/PuzzlePublisher.sketchplugin/Contents/Sketch/resources/viewer-top.css
@@ -8,7 +8,7 @@
 	text-align: center;
     margin: 0 auto;	   
     /*width:100%;*/
-    /*position:fixed; */
+    position:absolute;
 }
 
 #content-shadow {
