--- a/PuzzlePublisher.sketchplugin/Contents/Sketch/pp-viewer/viewer/resources/viewer.css
+++ b/PuzzlePublisher.sketchplugin/Contents/Sketch/pp-viewer/viewer/resources/viewer.css
@@ -1159,7 +1159,8 @@ area {
 }
 
 .panelVSCroll {
-    overflow-y: auto
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .fixedPanelFloat {
@@ -1290,4 +1291,25 @@ area {
 
 @media (prefers-color-scheme: light) {
     /* Light styles go here! */
+}
+
+/* custom scrollbar */
+.panelVSCroll.always::-webkit-scrollbar {
+    width: 8px;
+}
+
+.panelVSCroll.always::-webkit-scrollbar-track {
+    background-color: transparent;
+}
+
+.panelVSCroll.always::-webkit-scrollbar-thumb {
+    background-color: white;
+    border-radius: 8px;
+    border: 2px solid #d6dee1;
+    background-clip: content-box;
+    min-height: 80px;
+}
+
+.panelVSCroll.always::-webkit-scrollbar-thumb:hover {
+    background-color: #a8bbbf;
 }
